--- a/slooky/package.json
+++ b/slooky/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
+    "start": "cross-env NODE_ENV=production node ./dist/index.js",
     "build": "tsc -p .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config .jestrc.json"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.14.21",
+    "cross-env": "^7.0.3",
     "discord.js": "^12.5.1",
     "lodash": "^4.17.20",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.167"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/lodash": "^4.14.167",
+    "babel-jest": "^26.6.3",
+    "ts-jest": "^26.4.4"
   }
 }
