--- a/slooky/package.json
+++ b/slooky/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.14.21",
+    "aws-sdk": "^2.828.0",
     "cron": "^1.8.2",
     "cross-env": "^7.0.3",
     "discord.js": "^12.5.1",
