--- a/appspec.yml
+++ b/appspec.yml
@@ -8,8 +8,11 @@ hooks:
     - location: scripts/before_installation.sh
       timeout: 300
       runas: root
+  AfterInstall:
+    - location: scripts/after_installation.sh
+      timeout: 300
+      runas: root
   ApplicationStart:
     - location: scripts/application_start.sh
-    - location: scripts/create_test_db.sh
       timeout: 300
       runas: root
